# etwas

./: .gitignore  CMakeLists.txt  README.md  fzk2.pro  testdev.pro
src/: main.cpp  resources.qrc  tr_ru.ts
src/ioservice/: asyncqueue.h  inputcontroller.cpp  inputcontroller.h  inputcontroller_private.cpp  inputcontroller_private.h  outputcontroller.cpp  outputcontroller.h  outputcontroller_private.cpp  outputcontroller_private.h  transport.cpp  transport.h  transport_private.cpp  transport_private.h
src/logger/: logger.cpp  logger.h
src/protocol/: protocol.cpp  protocol.h  protocol_private.cpp  protocol_private.h  types.h
src/resources/: app_about.html  app_name.txt
src/settings/: displaysettings.cpp  displaysettings.h  settings.cpp  settings.h  settings_private.cpp  settings_private.h
src/storage/: imagestorage.cpp  imagestorage.h
src/ui/: connectionoptions.ui  connectionoptionsdialog.cpp  connectionoptionsdialog.h  controlpanel.ui  controlpanelwidget.cpp  controlpanelwidget.h  createmessages.ui  createmessageswidget.cpp  createmessageswidget.h  currenttime.ui  currenttimedialog.cpp  currenttimedialog.h  devicelog.ui  devicelogwidget.cpp  devicelogwidget.h  displaycontrol.ui  displaycontrolwidget.cpp  displaycontrolwidget.h  displayoptions.ui  displayoptionswidget.cpp  displayoptionswidget.h  imagestorage.ui  imagestoragewidget.cpp  imagestoragewidget.h  mainwindow.cpp  mainwindow.h  subwindow.cpp  subwindow.h
tests/: CMakeLists.txt  tests.pro  unit-tests.cpp  unit-tests.pro
tests/convert-pixmap/: CMakeLists.txt  convert-pixmap.pro
tests/convert-pixmap/src/: main.cpp
tests/display-control/: CMakeLists.txt  display-control.pro
tests/display-control/src/: main.cpp  resources.qrc
tests/msg-debugger/: CMakeLists.txt  msg-debugger.pro
tests/msg-debugger/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
tests/retranslate-srv/: CMakeLists.txt  retranslate-srv.pro
tests/retranslate-srv/src/: main.cpp  retranslateserver.cpp  retranslateserver.h
tests/rw-settings/: CMakeLists.txt  rw-settings.pro
tests/rw-settings/src/: main.cpp
tests/send-receive/: send-receive.pro
tests/send-receive/src/: main.cpp  retranslateserver.cpp  retranslateserver.h
tests/serialization/: CMakeLists.txt  serialization.pro
tests/serialization/src/: basictest.cpp  basictest.h  beginlog.cpp  beginlog.h  blinkoptions.cpp  blinkoptions.h  brightoptions.cpp  brightoptions.h  buttonsstate.cpp  buttonsstate.h  currenttime.cpp  currenttime.h  deviceaddress.cpp  deviceaddress.h  deviceidentity.cpp  deviceidentity.h  displayimages.cpp  displayimages.h  displayoptions.cpp  displayoptions.h  imagedata.cpp  imagedata.h  main.cpp  main.cpp.bak  nextlog.cpp  nextlog.h
